2021-01-09  Allen D. Ball  <ball@hcf.dev>

	* jdk8/pom.xml: Started development of 3.0.2-SNAPSHOT.

2021-01-03  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 3.0.1.

2020-12-15  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 3.0.0.

2020-12-13  Allen D. Ball  <ball@hcf.dev>

	* jdk11/src/main/java/ball/tools/javadoc/StandardDoclet.java;
	Initial writing.

2020-12-10  Allen D. Ball  <ball@hcf.dev>

	* jdk11/src/main/java/ball/tools/javadoc/Extern.java:
	Initial writing.

2020-11-28  Allen D. Ball  <ball@hcf.dev>

	* (jdk11) Configure META-INF/services/jdk.javadoc.doclet.Taglet.

2020-11-23  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Started development of 3.0-SNAPSHOT.

2020-09-03  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 2.0.0.

2020-08-27  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/tools/javadoc/AbstractTaglet.java:
	Extend JavaxLangModelUtilities and re-implement getClassLoader().

2020-08-26  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/tools/javadoc/AbstractTaglet.java:
	Implement getClassLoader(): Use the CLASS_PATH specified by the
	DocumentationTool JavaFileManager.

2020-08-24  Allen D. Ball  <ball@hcf.dev>

	* Construct a shaded JAR that can be scanned by the
	maven-javadoc-plugin for Taglets.

2020-08-16  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/tools/javadoc/AbstractTaglet.java:
	Implement href(Tag,Object) (dispatch to private methods through
	reflection).

	* src/main/java/ball/tools/javadoc/JavadocHTMLTemplates.java:
	Require href(Tag,Object) is implemented.

2020-07-22  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/tools/javadoc/InjectedFieldsTaglet.java:
	Include org.springframework.boot.web.server.LocalServerPort.

2020-07-15  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 1.0.0.

2020-07-14  Allen D. Ball  <ball@hcf.dev>

	* Seperated from ball-util.

2020-05-24  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/tools/javadoc/MavenTaglet.java: