@@ -1,5 +1,9 @@
 2021-01-09  Allen D. Ball  <ball@hcf.dev>
 
+	* jdk11/src/main/java/ball/tools/javadoc/AbstractTaglet.java:
+	In a(DocTree,Element,Class<?>,Node), include inner class's outer
+	class(es) in generated <a/>-wrapped node.
+
 	* jdk8/pom.xml: Started development of 3.0.2-SNAPSHOT.
 
 2021-01-03  Allen D. Ball  <ball@hcf.dev>
